@@ -1,3 +1,9 @@
+2011-09-18 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCralloc.hpp,
+	  support/regression/tests/bug3410878.c:
+	  Fixed bug #3410878.
+
 2011-09-18 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCast.c (processParms): fixed bugs 3166064 and 3394118
